--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ runs:
   - ${{ inputs.input }}
   - '-l'
   - ${{ inputs.language }}
+  - '-c'
+  - ${{ inputs.config }}
+  - '-t'
+  - ${{ inputs.templates }}
 inputs:
   language:
     description: Swagger language
@@ -23,3 +27,9 @@ inputs:
   action:
     description: swagger-codegen-cli action
     required: true
+  config:
+    description: swagger-codegen-cli -c
+    required: true
+  templates:
+    description: swagger-codegen-cli -t
+    required: true     
